# vscode-cpp-cmake-clang-tools

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp  thread.cpp  thread_2.cpp
AudioStream_lib/: AudioStream.cpp  AudioStream.hpp  CMakeLists.txt
Calc_lib/: CMakeLists.txt  Calc.cpp  Calc.h  Calc.hpp
